OpenXR-MotionCompensation Changelog

Version 0.2.6

	Input
	- excluded inpouts with additional modifiers (only for artificial keyboard input e.g. joy2key)
	
Version 0.2.5

	Graphical overlay
	- added toggle to deactivate initialization
	- configurable marker size
	
	Virtual tracker
	- added upside down mode (required  for iRacing)
	
	Physical tracker
	- added early initialization option (required for iRacing & DFR in OXRTK)

	Bugfixes
	- fixed crash on vr session end with oxrtk present
	- fixed physical tracker fallback initialization
	- fixed reference space creation causing cor position to jump on mc activation
	
	Known issues
	- incompatible with DCS World native OpenXR mode (unacceptable fps drop, under investigation)
	
Version 0.2.4

	Graphical overlay
	- added marker to visualize reference tracker
	- support for DirectX 11 and 12
	
	Disable functionality
	- deactivate completely
	- omit physical tracker initialization
	
	Configure pose reversion on frame submission
	- (optional) eye position cache (pre 0.1.4 method)
	- cache tolerance configurable

Version 0.2.3

	Tracker connection loss detection
	- unresponsive tracker is detected
	- motion compensation is deactivated after timeout

	MMF Reader
	- added application to display input values from memory mapped file(s) used for virtual trackers
	
	Installation Executable
	- Reorder loading of OpenXR Tookit to enable eye tracking / dynamic foveated rendering

	Bugfixes:
	- fixed loading order of OpenXR Toolkit to enable dynamic foveated rendering
	
Version 0.2.2

	Vive Tracker
	- added support for Vive tracker
	
	Bugfixes
	- fixed crash to desktop on physical tracker initialization (Assetto Corsa Competizione with OpenComposite)

	Miscellaneous
	- minor logging improvements (milliseconds in timestamps, added entries for initialization API calls)
	
Version 0.2.1
	
	Hotfixes
	- fixed motion controller initialization for apps not using them natively
	- fixed conflict with other Open XR API Layers
	